--- a/promise简化版.html
+++ b/promise简化版.html
@@ -13,7 +13,7 @@
     const RESOLVED = 'resolved';
     const REJECTED = 'rejected';
     function MyPromise(fn) {
-      that = this
+      let that = this
       that.status = PENDING
       that.value = null
       that.reason = null
@@ -43,14 +43,14 @@
       }
 
     }
-    // 2.链式调用
+    // 1.回调函数延迟绑定 2.链式调用
     MyPromise.prototype.then = function (onFulfilled, onRejected) {
       // 成功回调不传给它一个默认函数
       onFulfilled = typeof onFulfilled === "function" ? onFulfilled : value => value;
       // 对于失败回调直接抛错
       onRejected = typeof onRejected === "function" ? onRejected : error => { throw error };
 
-      that = this
+      let that = this
       if (that.status === PENDING) {
         that.resolvedCallbacks.push(onFulfilled)
         that.rejectedCallbacks.push(onRejected)
@@ -68,18 +68,48 @@
       return this.then(null, onRejected)
     }
 
+    // Promise.race 
+    function promiseRace(arr) {
+      return new Promise((resolve, reject) => {
+        arr.forEach((item) => {
+          item.then(resolve, reject)
+        })
+      })
+    }
+
+    // Promise.all 
+    function promiseAll(arr) {
+      return new Promise((resolve, reject) => {
+        let count = 0;
+        let resArr = [];
+        for (let i = 0; i < arr.length; i++) {
+          arr[i].then((res) => {
+            resArr.push(res);
+            count++;
+            if (count === arr.length) {
+              return resolve(resArr);
+            }
+          }).catch((err) => {
+            console.log(err);
+          })
+        }
+      })
+    }
+
     let promise = new MyPromise((resolve, reject) => {
       setTimeout(() => {
         resolve('resolve')
       })
     })
 
-    promise.then((data) => {
-      console.log('then 1 ' + data)
-      return data
-    }).then((data) => {
-      console.log('then 2 ' + data)
-    })
+    // promise.then((data) => {
+    //   console.log('then 1 ' + data)
+    //   return data
+    // }).then((data) => {
+    //   console.log('then 2 ' + data)
+    // }).then((data) => {
+    //   console.log('then 2 ' + 333)
+    // })
 
   </script>
 </body>
