--- a/call、apply、bind.html
+++ b/call、apply、bind.html
@@ -54,18 +54,23 @@
         fn3(28)
 
 
-        // bind 函数的两个特点：
+        // bind 函数的3个特点：
         // 返回一个函数
         // 可以传入参数
+        // 一个绑定函数也能使用new操作符创建对象：这种行为就像把原函数当成构造器。提供的 this 值被忽略，同时调用时的参数被提供给模拟函数。
 
         Function.prototype.bind2 = function (ctx, ...args) {
             if (typeof this !== "function") {
                 throw new Error("Function.prototype.bind - what is trying to be bound is not callable");
             }
+            console.log(ctx)
             var self = this
             // var args1 = [...arguments].slice(1) 截取参数
             var fn = function () {
                 // var args2 = [...arguments].slice(1) 返回函数参数
+
+                // 当作为构造函数时，this 指向实例，此时结果为 true，将绑定函数的 this 指向该实例，可以让实例获得来自绑定函数的值
+                // 当作为普通函数时，this 指向 window，此时结果为 false，将绑定函数的 this 指向 context
                 return self.apply(this instanceof fn ? this : ctx, args.concat(...arguments))
             }
             // 修改返回函数的 prototype 为绑定函数的 prototype，实例就可以继承绑定函数的原型中的值
