'每天一点点'

--- a/vue/vue3中的数据劫持和依赖收集.html
+++ b/vue/vue3中的数据劫持和依赖收集.html
@@ -14,7 +14,7 @@
     // vue2中需要递归遍历对象所有key，速度慢
     // 数组响应化：覆盖数组原型⽅法，额外增加通知逻辑
     // 新增或删除属性⽆法监听，需要使⽤特殊api
-    // 不⽀持Map、Set、Class等数据结构
+    // 不⽀持Map、Set、等数据结构 Class
 
     // Proxy
     // 代理整个对象，从⽽侦测数据变化
