--- a/算法/zero/07.html
+++ b/算法/zero/07.html
@@ -1,13 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
+
 <body>
-    <script>
-        
-    </script>
+  <script>
+    var prices = [7, 1, 5, 3, 6, 4]
+    var maxProfit = function (prices) {
+
+    };
+    let n = prices.length
+    let maxTime = 2;
+    let dp = Array.from(new Array(n), () => new Array(maxTime + 1));
+    for (let i = 0; i < n; i++) {
+      for (let r = 0; r <= maxTime; r++) {
+        dp[i][r] = new Array(2).fill(0);
+      }
+    }
+
+    console.log(dp)
+
+
+    var rest = new Array(2).fill(0)
+    var ka = new Array(maxTime + 1).fill(rest)
+    var dp2 = new Array(n).fill(ka)
+    console.log(dp2)
+    console.log(JSON.stringify(dp) == JSON.stringify(dp2))
+
+
+    var ka2 = Array.from(new Array(maxTime + 1), () => new Array(2).fill(0));
+    var dp3 = Array.from(new Array(n), () => ka2)
+
+    console.log(dp3)
+
+  </script>
 </body>
+
 </html>
