--- a/有趣的面试/异步promise.html
+++ b/有趣的面试/异步promise.html
@@ -21,24 +21,58 @@
         }
 
         console.log('script start')
-        setTimeout(function() {
+        setTimeout(function () {
             console.log('setTimeout')
         }, 0)
 
         async1();
-        new Promise(function(resolve) {
+        new Promise(function (resolve) {
             console.log('promise1')
             resolve();
-        }).then(function() {
+        }).then(function () {
             console.log('promise2')
         })
 
         console.log('script end')
+
+        // setTimeout(function () {
+        //     console.log('timeout1');
+        // }, 1000);
+
+        // console.log('start');
+
+        // Promise.resolve().then(function () {
+        //     console.log('promise1');
+        //     Promise.resolve().then(function () {
+        //         console.log('promise2');
+        //     });
+        //     setTimeout(function () {
+        //         Promise.resolve().then(function () {
+        //             console.log('promise3');
+        //         });
+        //         console.log('timeout2')
+        //     }, 0);
+        // });
+
+        // console.log('done');
     </script>
 
     <script>
         // 1. promise为什么是异步的
         // promise then 为什么能链式调用
+        // 注意当我们 new Promsie() 的时候，内部的代码会执行的，跟同步任务一样的，而 .then() 在 resolve() 的情况下才会添加到微任务。
+
+        // 重点：
+
+        // 执行到 await async2()，发现 async2 也是个 async 定义的函数，
+        // 所以直接执行了“console.log('async2')”，同时async2返回了一个Promise，
+        // 划重点：此时返回的Promise会被放入到回调队列中等待，await会让出线程，接下来就会跳出 async1函数 继续往下执行。
+
+        // 然后执行到 new Promise，前面说过了promise是立即执行的，所以先打印出来“promise1”，
+        // 然后执行到 resolve 的时候，resolve这个任务就被放到回调队列中等待，然后跳出Promise继续往下执行，输出“script end”。 
+
+        // 同步的事件都循环执行完了，调用栈现在已经空出来了，那么事件循环就会去回调队列里面取任务继续放到调用栈里面了。
+
     </script>
 </body>
 
