--- a/JS/数组去重.html
+++ b/JS/数组去重.html
@@ -88,7 +88,7 @@
             return true
         }
 
-        console.log(unique_obj2([ {  a: 1, c: NaN }, { a: 1, b: NaN }]))
+        console.log(unique_obj2([ {  a: 1, c: {A: 1} }, { a: 1, c: {A: 1} }]))
 
 
 
