--- a/算法/排序/快速排序.html
+++ b/算法/排序/快速排序.html
@@ -29,6 +29,43 @@
       }
       console.log(arr)
     }
+
+    {
+      function quickSort(nums, start, end) {
+        if (start >= end) {
+          return;
+        }
+        const mid = partition(nums, start, end);
+        quickSort(nums, start, mid - 1);
+        quickSort(nums, mid + 1, end);
+      }
+      function partition(nums, start, end) {
+        const pivot = nums[start];
+        let left = start + 1;
+        let right = end;
+        while (left < right) {
+          while (left < right && nums[left] <= pivot) {
+            left++;
+          }
+          while (left < right && nums[right] >= pivot) {
+            right--;
+          }
+          if (left < right) {
+            [nums[left], nums[right]] = [nums[right], nums[left]];
+            left++;
+            right--;
+          }
+        }
+        if (left === right && nums[right] > pivot) {
+          right--;
+        }
+        if (right !== start) {
+          [nums[start], nums[right]] = [nums[right], nums[start]];
+        }
+        return right;
+      }
+      quickSort(arr,0,arr.length-1)
+    }
   </script>
 </body>
 
